syntax = "proto3";

option csharp_namespace = "Web.InternalApi";

import "google/protobuf/timestamp.proto";

package supporter;

service SupporterLinkService {
  rpc GetCheckoutLink (CreateLinkOptions) returns (CreateLinkReply);

  rpc GetManageLink (GetManageLinkOptions) returns (GetManageLinkReply);

  rpc AddOrUpdateStripeSupporter (AddOrUpdateStripeSupporterRequest) returns (AddOrUpdateStripeSupporterReply);

  rpc AddGiftedSupporter (AddGiftedSupporterRequest) returns (AddGiftedSupporterReply);

  rpc MigrateDiscordForStripeSupporter (MigrateDiscordForStripeSupporterRequest) returns (MigrateDiscordForStripeSupporterReply);
}

message CreateLinkOptions {
  int64 discordUserId = 1;
  string type = 2;
  string lastFmUserName = 3;
  string existingCustomerId = 4;
  string priceId = 5;
  string source = 6;
  int64 giftReceiverDiscordUserId = 7;
  string giftReceiverLastFmUserName = 8;
}

message CreateLinkReply {
  string checkoutLink = 1;
}

message GetManageLinkOptions {
  string stripeCustomerId = 1;
}

message GetManageLinkReply {
  string manageLink = 1;
}

message AddOrUpdateStripeSupporterRequest {
  int64 discordUserId = 1;
  string lastFmUserName = 2;
  string stripeCustomerId = 3;
  string stripeSubscriptionId = 4;
  google.protobuf.Timestamp created = 5;
  google.protobuf.Timestamp endsAt = 6;
  bool active = 7;
  string currency = 8;
  string source = 9;
}

message AddOrUpdateStripeSupporterReply {
  bool success = 1;
}

message MigrateDiscordForStripeSupporterRequest {
  string stripeCustomerId = 1;
  string stripeSubscriptionId = 2;
  int64 oldDiscordUserId = 3;
  int64 newDiscordUserId = 4;
  string oldLastFmUserName = 5;
  string newLastFmUserName = 6;
}

message MigrateDiscordForStripeSupporterReply {
  bool success = 1;
}

message AddGiftedSupporterRequest {
  int64 purchaserDiscordUserId = 1;
  string purchaserLastFmUserName = 2;
  int64 receiverDiscordUserId = 3;
  string stripeCustomerId = 4;
  string stripePaymentIntentId = 5;
  google.protobuf.Timestamp created = 6;
  google.protobuf.Timestamp endsAt = 7;
  string currency = 8;
  string source = 9;
  string priceId = 10;
  string receiverLastFmUserName = 11;
}

message AddGiftedSupporterReply {
  bool success = 1;
}
